<resources>
    <string name="app_name">ProjectsControl</string>
    <string name="projectName">Project Name</string>
    <string name="city">City</string>
    <string name="salesman">Salesman</string>
    <string name="tuyaUserEmail">Tuya User Email</string>
    <string name="tuyaUserPassword">Tuya User Password</string>
    <string name="url">URL</string>
    <string name="ratcoProjectId">Ratco Project Id</string>
    <string name="ratcoClientId">Ratco Client Id</string>
    <string name="addNewProject">Add New Project</string>
    <string name="add">Add</string>
    <string name="verificationcode">verification code</string>
    <string name="required"> (Required)</string>
    <string name="modify">Modify</string>
    <string name="addHome">Add Home</string>
    <string name="homes">Homes</string>
</resources>