<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddNewProject">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewProject"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/projectName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/projectName"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/salesman"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/salesman"
            android:inputType="textPersonName"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/tuyaUserEmail"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tuyaUserEmail"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView160"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/tuyaUserPassword"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tuyaUserPassword"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/url"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textPersonName"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/ratcoProjectId"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ratcoProjectId"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/ratcoClientId"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ratcoClientId"
            android:inputType="textPersonName"
            android:textColorHint="#78909C"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addProject"
        android:text="@string/add"/>
</LinearLayout>